# gnome-repro-structural

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.yaml
notebooks/: 01_data_check.ipynb
scripts/: build_cache.py  check_split.py  download_data.py  smoke_test.py  train_full.py
src/gnome/: data.py  graphs.py  model.py  train.py
